aTunes 3.0.4
------------
- FIX: Add to play list and play when user uses "Open With" option in Windows

aTunes 3.0.3
------------
- More heap size for Mac OS X version
- FIX: Error when changing look and feel sin in Windows with Java 1.7.X
- FIX: Radio navigator not controlling clicking out of table bounds
- FIX: Only update displayable windows when changing look and feel skin
- FIX: Some UI operations with navigation tree where not performed in EDT
- FIX: Block device disconnection while refreshing
- FIX: CustomSearchDialog controls not disabled when empty rules
- FIX: NPE when setting an unknown album as favorite

aTunes 3.0.2
------------
- FIX: Error with modal dialogs in Linux
- FIX: Error when importing folders after canceling repository load
- FIX: Add random songs fails if repository not loaded or empty
- FIX: Disabled rounded corners with Substance as seem to cause problems with early 1.6.0 virtual machines (3.0.1 fix not working)
- FIX: Problem when importing files from a Windows system folder with no childs

aTunes 3.0.1
------------
- XINE Engine discontinued
- FIX: Better control of exceptions reading tags with JAudiotagger
- FIX: NPE when importing from a folder without parent file
- FIX: Disable play list menu actions when play list selection changes, not only popup menu
- FIX: Problem reordering columns with Java 7
- FIX: Problem changing look and feel and skin using keyboard in combos
- FIX: Error retrieving titles from CDDB while ripping a CD
- FIX: Avoid concurrency problems with album collections
- FIX: Updated JNA library to avoid initialization errors
- FIX: Initial heap size changed to 128MB
- FIX: Check if icon cache fails reading icon files
- FIX: Problem with play lists active and visible after upgrading version
- FIX: Problem marking artist as favorite when artist is unknown or artist album is used
- FIX: Disabled rounded corners with Substance as seem to cause problems with early 1.6.0 virtual machines